[refactor]: fix bags
