# models/vacancycategories.go
@@ -5,3 +5,7 @@ type VacancyCategory struct {
 	Name string `json:"name"`
 	BaseModel
 }
+
+type SwagVacancyCategories struct {
+	Name string `json:"name"`
+}
